styles/main.scss
@import "_reset";
@import "_mixins";
@import "_fonts";
@import "_vars";

html {
  font-size: 110%;
}

body {
  background: $color-footer-bg; // The page background is set on .sitewrapper
  line-height: 1.5;
  padding-bottom: 1rem;
  font-family: "Rebond Grotesque", sans-serif;
  color: #222;
}

.skip-link {
  position: absolute;
  top: 0;
  transform: translateY(-100%);

  &:focus {
    transform: translateY(0);
  }
}

.hidden {
  display: none;
}

h1, h2, h3, h4, h5, h6 {
  color: #000;
}

h1 { font-size: $font-size-h1; }
h2 { font-size: $font-size-h2; }
h3 { font-size: $font-size-h3; }
h4 { font-size: $font-size-h4; }
h5 { font-size: $font-size-h5; }
h6 { font-size: $font-size-h6; }

big { font-size: $font-size-h4; }

a {
  color: $color-primary;
}

header, main, footer {
  padding: 0 1rem;
  max-width: 640px;
  margin-left: auto;
  margin-right: auto;
}

dl {
  dt {
    float: left;
    margin-right: 4px;

    &::after {
      content: ":";
    }
  }
}

blockquote {
  border-left: 2px solid $color-primary;
  padding-left: 1rem;
  font-style: italic;
}

pre {
  overflow-x: scroll;
}

.sitewrapper {
  @include stack;
  border-bottom: 1px solid $color-footer-border;
  background: $color-bg;
  padding: 1rem 0;
}

header {
  display: flex;
  gap: .5rem;
  align-items: center;

  nav {
    display: flex;
    gap: .5rem;

    a {
      text-decoration: none;
      color: #111;
      font-weight: 500;
      
      &.active, &:hover {
        text-decoration: underline;
        text-underline-offset: 4px;
        text-decoration-thickness: 2px;
        text-decoration-color: $color-primary;
      }
    }
  }

  .hero {
    &__arne {
      height: 64px;
      width: auto;
    }

    &__arne--alt-1 {
      .mouth-1 {
        visibility: hidden;
      }
      .mouth-2 {
        visibility: visible;
      }
    }

    &__arne--alt-2 {
      .eyes-1, .mouth-2 {
          visibility: hidden !important;
      }
      .eyes-2, .tounge {
          visibility: visible;
      }
    }
  }
}

main {
  img {
    max-width: 100%;
  }

  article, section, .e-content {
    @include stack;
  }

  h1, h2, h3, h4, h5, h6 {
    line-height: 1.2;
  }
}

.blog, .page {
  @include stack;
}

.weekly {
  @include stack;

  &__header {
    @include stack(.5rem);
  }

  &__subscribe_form {
    @include stack(.5rem);

    small {
      display: block;
      line-height: 1.2;
    }
  }
}

.book_review {
  &__cover {
    float: right;
    margin-left: 1rem;
    width: 33%;
  }
}

footer {
  padding: 1rem;
  font-size: $font-size-small;
  display: flex;
  flex-direction: row-reverse;
  justify-content: space-between;
  color: $color-footer-fg;

  a {
    color: $color-footer-fg;
  }

  > br {
    // Don't confuse flexbox
    display: none;
  }

  nav {
    text-align: right;
  }
}

.index {
  &__hero {
    h1 {
      font-size: $font-size-large;
    }
  }
}

.no-underline {
  text-decoration: none;
}

